# Keepers

./: .gitignore  Cargo.toml  DESIGN_TOKENS.md  README.md  downstream.desktop  keepers.desktop  teste.txt
.claude/: settings.local.json
assets/: keepers.desktop
assets/usr/share/applications/: keepers.desktop
assets/usr/share/metainfo/: org.karansluciano.keepers.appdata.xml
flatpak/: cargo-sources.json  org.karansluciano.keepers.yml
squashfs-root/: AppRun  cargo-appimage.desktop
src/: main.rs
